--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/jwilferd10/Team-Profile-Generator/issues"
   },
-  "homepage": "https://github.com/jwilferd10/Team-Profile-Generator#readme"
+  "homepage": "https://github.com/jwilferd10/Team-Profile-Generator#readme",
+  "dependencies": {
+    "inquirer": "^9.2.13",
+    "jest": "^29.7.0"
+  }
 }
